Version 0.5.3: fully implemented book rating; client at most fully functional; added controller util; some clean-ups