@@ -5,12 +5,12 @@ import de.mi.common.Book;
 import de.mi.common.BookFilter;
 import de.mi.common.Subfield;
 import de.mi.server.mapper.LiteratureMapper;
-import de.mi.server.sql.SQLQueryExecutor;
+import de.mi.server.sql.SQLExecutor;
+import de.mi.server.sql.SQLExecutorFactory;
 
 import java.sql.SQLException;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -19,11 +19,12 @@ public final class LiteratureQuery {
     private static final BookFilter EMPTY_FILTER = BookFilter.builder().build();
     private static final Set<Subfield> SUBFIELDS = new HashSet<>();
     private static final String BOOK_SQL = """
-            SELECT id, title, publisher, year, pages
+            SELECT id, title, publisher, year, pages, rating
             FROM books
             WHERE LOWER(title) LIKE '%%%s%%'
               AND year BETWEEN %d AND %d
               AND pages BETWEEN %d AND %d
+              AND rating BETWEEN %d AND %d
               AND EXISTS(SELECT s.id
                          FROM subfields s
                                   JOIN book_subfields bs ON s.id = bs.subfield_id
@@ -34,23 +35,23 @@ public final class LiteratureQuery {
                                   JOIN book_authors ba ON a.id = ba.author_id
                          WHERE ba.book_id = books.id
                            AND LOWER(CONCAT_WS(' ', a.first_name, a.last_name)) LIKE '%%%s%%')""";
-    private static final SQLQueryExecutor<Author> BOOK_AUTHOR_EXECUTOR
-            = new SQLQueryExecutor<>(DBConnection.prepareStatement("""
+    private static final SQLExecutor<List<Author>> BOOK_AUTHOR_EXECUTOR
+            = SQLExecutorFactory.createQuery(DBConnection.prepareStatement("""
             SELECT id, first_name, last_name
             FROM authors JOIN book_authors ON id = author_id
             WHERE book_id = ?"""), LiteratureMapper.AUTHOR_MAPPER);
-    private static final SQLQueryExecutor<Subfield> BOOK_SUBFIELD_EXECUTOR
-            = new SQLQueryExecutor<>(DBConnection.prepareStatement("""
+    private static final SQLExecutor<List<Subfield>> BOOK_SUBFIELD_EXECUTOR
+            = SQLExecutorFactory.createQuery(DBConnection.prepareStatement("""
             SELECT id, name
             FROM subfields JOIN book_subfields ON id = subfield_id
             WHERE book_id = ?"""), LiteratureMapper.SUBFIELD_MAPPER);
-    private static final SQLQueryExecutor<Author> AUTHOR_EXECUTOR
-            = new SQLQueryExecutor<>(DBConnection.prepareStatement("""
+    private static final SQLExecutor<List<Author>> AUTHOR_EXECUTOR
+            = SQLExecutorFactory.createQuery(DBConnection.prepareStatement("""
             SELECT id, first_name, last_name
             FROM authors
             WHERE first_name = ? AND last_name = ?"""), LiteratureMapper.AUTHOR_MAPPER);
-    private static final SQLQueryExecutor<Book> BOOK_EXECUTOR
-            = new SQLQueryExecutor<>(DBConnection.prepareStatement("""
+    private static final SQLExecutor<List<Book>> BOOK_EXECUTOR
+            = SQLExecutorFactory.createQuery(DBConnection.prepareStatement("""
             SELECT id, title, publisher, year, pages
             FROM books
             WHERE title = ?"""), LiteratureMapper.BOOK_MAPPER);
@@ -58,7 +59,7 @@ public final class LiteratureQuery {
     static {
         try (var stmt = DBConnection.createStatement()) {
             var sql = "SELECT id, name FROM subfields";
-            SUBFIELDS.addAll(new SQLQueryExecutor<>(stmt, sql, LiteratureMapper.SUBFIELD_MAPPER).execute());
+            SUBFIELDS.addAll(SQLExecutorFactory.createQuery(stmt, sql, LiteratureMapper.SUBFIELD_MAPPER).execute());
         } catch (SQLException e) {
             throw new ExceptionInInitializerError(e);
         }
@@ -68,7 +69,7 @@ public final class LiteratureQuery {
     }
 
     public static Set<Subfield> getSubfields() {
-        return Collections.unmodifiableSet(SUBFIELDS);
+        return Set.copyOf(SUBFIELDS);
     }
 
     public static Set<Book> queryBooks() throws SQLException {
@@ -79,25 +80,26 @@ public final class LiteratureQuery {
         final Set<Book> books = new HashSet<>();
         final String bookSQL = String.format(
                 BOOK_SQL,
-                filter.titleSearch().orElse(""),
+                Optional.ofNullable(filter.titleSearch()).orElse(""),
                 filter.yearRange().min(),
                 filter.yearRange().max(),
                 filter.pageRange().min(),
                 filter.pageRange().max(),
+                filter.ratingRange().min(),
+                filter.ratingRange().max(),
                 Optional.of(filter)
                         .map(BookFilter::subfields)
                         .filter(s -> !s.isEmpty())
-                        .map(Collection::stream)
-                        .orElseGet(SUBFIELDS::stream)
+                        .orElse(SUBFIELDS)
+                        .stream()
                         .map(Subfield::id)
                         .map(String::valueOf)
                         .collect(Collectors.joining(",")),
-                filter.authorSearch().orElse("")
+                Optional.ofNullable(filter.authorSearch()).orElse("")
         );
 
-        try (var stmt = DBConnection.createStatement()) {
-            SQLQueryExecutor<Book> query = new SQLQueryExecutor<>(stmt, bookSQL, LiteratureMapper.BOOK_MAPPER);
-            for (Book b : query.execute()) {
+        try (var statement = DBConnection.createStatement()) {
+            for (Book b : SQLExecutorFactory.createQuery(statement, bookSQL, LiteratureMapper.BOOK_MAPPER).execute()) {
                 books.add(new Book(
                         b.id(),
                         b.title(),
@@ -111,7 +113,7 @@ public final class LiteratureQuery {
             }
         }
 
-        return Collections.unmodifiableSet(books);
+        return Set.copyOf(books);
     }
 
     static Author queryAuthorByName(String firstName, String lastName) throws SQLException {
